Added changes to layout page

--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,20 +1,11 @@
-<!-- <div class="footer-box island-1-4">
-<i class="icon i-18"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i>
-<i class="icon i-18"><svg><use xlink:href="/images/icons.svg#instagram"></use></svg></i>
-<i class="icon i-18"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i>
-<div class="text-center">
-  <p class="push-0 micro">Mythological Creature Market 2019</p>
-</div>
-</div> -->
+<footer role="contentinfo" tabindex="0">
+  <div class="text-center footer-box relative island-1-4">
+    <ul class="island-1-4 list-group-inline push-0 absolute pin-lc">
+      <li><a href="#"><i class="icon i-18"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i></a></li>
+      <li><a href="#"><i class="icon i-18"><svg><use xlink:href="/images/icons.svg#instagram"></use></svg></i></a></li>
+      <li><a href="#"><i class="icon i-18"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i></a></li>
+    </ul>
+    <p class="push-0 micro gutter-2">Mythological Creature Market 2019</p>
+  </div>
 
-<div class="text-center footer-box relative island-1-4">
-  <ul class="island-1-4 list-group-inline push-0 absolute pin-lc">
-    <li><a href="#"><i class="icon i-18"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i></a></li>
-    <li><a href="#"><i class="icon i-18"><svg><use xlink:href="/images/icons.svg#instagram"></use></svg></i></a></li>
-    <li><a href="#"><i class="icon i-18"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i></a></li>
-  </ul>
-
-  <p class="push-0 micro gutter-2">Mythological Creature Market 2019</p>
-
-
-</div>
+</footer>
