--- a/_patterns/header/header.html
+++ b/_patterns/header/header.html
@@ -5,7 +5,7 @@
       <ul class="push-0">
         <li><a href="/index/">Home</a></li>
         <li><a href="/about/">About</a></li>
-        <li {% if page.highlight_nav == 'products' %}current{% endif %}><a href="/products/">Products</a></li>
+        <li class="{% if page.highlight_nav == 'products' %}current{% endif %}"><a href="/products/">Products</a></li>
         <li><a href="/contact/">Contact</a></li>
 
         <div class="search-container">
@@ -18,16 +18,6 @@
       </ul>
     </nav>
   </div>
-
-  <div class="breadcrumb-div unit xs-1">
-    <ul class="breadcrumb push-0 island-1-4 text-center">
-      <li><a href="#" class="micro">Home /</a></li>
-      <li><a href="#" class="micro">Products /</a></li>
-      <li><a href="#" class="micro">Griffins /</a></li>
-      <li class="micro">European Griffins</li>
-    </ul>
-  </div>
-
   <div class="unit xs-1">
     <div class="title grid gutter-2 pad-b">
       <img class="logo inline-block unit xs-1 s-1 m-1-4 l-1-4 xl-1-4" src="/images/logo.svg" alt="">
