Add the main pages to the website

--- a/_patterns/cards/view-card.html
+++ b/_patterns/cards/view-card.html
@@ -1,9 +1,11 @@
-<div class="card view-card chop">
+<div class="view-card chop">
   <div class="pic">
-    <img class="img-flex" src="/images/crystals/{{include.image}}" alt="">
+    <img class="img-flex img" src="/images/crystals/{{include.image}}" alt="">
   </div>
   <div class="island-1-2">
     <h2>{{include.title}}</h2>
-    {% pattern buttons/wide text=include.button_text%}
+    <div>
+      {% pattern buttons/wide text=include.button_text%}
+    </div>
   </div>
 </div>
