--- a/_patterns/forms/newsletter.html
+++ b/_patterns/forms/newsletter.html
@@ -1,11 +1,10 @@
-<div class="max-length gutter" method="post" action="#">
-  <div class="content">
-    <label for="email"></label>
+<div class="max-length gutter newslet input-container" method="post" action="#">
+  <div class="search max-length input-container">
     <i class="icon i-18"><svg><use xlink:href="/images/icons.svg#mail"></use></svg></i>
-    <input id="email" name="email"
+    <input class="input-feild" id="email" name="email"
     placeholder="Sign up for our News Letter" name="email" >
-    <div class="sub">
-      {% pattern buttons/basic text="Submit" %}
-    </div>
+    <div class="gutter-1-2">
+    {% pattern buttons/basic text="Submit" %}
+  </div>
   </div>
 </div>
