--- a/_patterns/navigation/top-nav.html
+++ b/_patterns/navigation/top-nav.html
@@ -1,10 +1,18 @@
-<nav>
-  <ul class="nav">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Shop Intetion</a></li>
-    <li><a href="#">Blog</a></li>
-    <li><a href="#">Learn</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-</nav>
+<img src="/images/border.svg" alt="">
+<header class="banne grid">
+  <div class="uniit xs-0 s-1-4 m-1-4 l-0">
+  </div>
+  <div class="unit xs-1 s-1-2 m-1-2 l-1-4 island">
+    <img src="/images/logo.svg" alt="">
+  </div>
+  <nav class=" unit s-1 m-1 l-3-4 text-center pad-t-1-4">
+    <ul class="nav list-group">
+      <li><a class="island current" href="/index.html">Home</a></li>
+      <li><a class="island" href="#">About</a></li>
+      <li><a class="island" href="#">Shop Intention</a></li>
+      <li><a class="island" href="#">Learn</a></li>
+      <li><a class="island" href="#">Blog</a></li>
+      <li><a class="island" href="#">Contact</a></li>
+    </ul>
+  </nav>
+</header>
