--- a/_patterns/forms/quantity.html
+++ b/_patterns/forms/quantity.html
@@ -1,4 +1,4 @@
-<div class="max-length island" method="post" action="#" novalidate>
+<div class="max-length" method="post" action="#" novalidate>
   <div class="error-message error-message-highlighted push island-1-2" role="alert" aria-live="assertive">
     <h3 class="push-0">
       <i class="icon i-32"><svg><use xlink:href="images/icon.svg#error" /></svg></i>
