Remove additional breadcrumb html file

--- a/_patterns/secondary-navigations/breadcrumbs.html
+++ b/_patterns/secondary-navigations/breadcrumbs.html
@@ -1,6 +1,8 @@
-<ul class="breadcrumb">
- <li><a href="#">Home</a></li>
- <li><a href="#">Products</a></li>
- <li><a href="#">Griffins</a></li>
- <li>European Griffins</li>
-</ul>
+<div class="breadcrumb-div unit xs-1">
+  <ul class="breadcrumb push-0 island-1-4 text-center">
+    <li><a href="#" class="micro">Home /</a></li>
+    <li><a href="#" class="micro">Products /</a></li>
+    <li><a href="#" class="micro">Griffins /</a></li>
+    <li class="micro">European Griffins</li>
+  </ul>
+</div>
