Fix product error

--- a/_patterns/cards/creature-card.html
+++ b/_patterns/cards/creature-card.html
@@ -3,5 +3,5 @@
   <img class="img-flex" src="/images/cryptid.png" alt="griffin">
   <p>A gnarly description about said monster</p>
   <strong>$ Pricing</strong>
-{% pattern buttons/primary text="See Collection" url="include.data.url" %}
+{% pattern buttons/basic text="See Collection" url="include.data.url" %}
 </div>
