--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,14 +1,14 @@
-<a class="product island-1-2 link-box" href="#" aria-label="View details on the Catonaut ceramic mug that is $15.99">
+<a class="product unit-content-distribute content-fill island-1-2 link-box" href="#" aria-label="View details on the Catonaut ceramic mug that is $15.99">
   <div class="push-1-2 chop">
     <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
-  <div class="card-content grid">
-    <div class="unit xs-2-3">
-      <h2 class="title mega push-0">{{include.data.name}}</h2>
-      <p class="type milli">{{include.data.cat}}</p>
+  <div class="card-content grid content-fill">
+    <div class="unit xs-1 s-1 m-1 l-2-3 unit-content-distribute">
+      <h2 class="title milli push-0">{{include.data.name}}</h2>
+      <p class="type nano push-1-2">by {{include.data.artist}}</p>
     </div>
-    <div class="unit xs-1-3 text-right">
-      <p class="price bold">CA${{include.data.price}}</p>
+    <div class="unit xs-1 s-1 m-1 l-1-3 price content-fill">
+      <p class="milli bold push-0">CA$ {{include.data.price}}</p>
     </div>
   </div>
 </a>
