--- a/_patterns/navigations/page-nav.html
+++ b/_patterns/navigations/page-nav.html
@@ -1,4 +1,4 @@
-<nav class="max-length text-center">
+<nav class="text-center">
   <ul class="page-nav list-group-inline">
     <li class="island-1-2">
       <a href="#">
