--- a/_patterns/navigations/sidebar.html
+++ b/_patterns/navigations/sidebar.html
@@ -1,4 +1,4 @@
-<div class="side-navigation gutter push-1-2">
+<div class="side-navigation push-1-2">
   <input type="checkbox" id="side-nav" class="side-check" checked>
   <label for="side-nav" class="side-label island-1-2 relative">
     <span class="icon-label">Menswear</span>
