--- a/_patterns/cards/sale-card.html
+++ b/_patterns/cards/sale-card.html
@@ -1,6 +1,6 @@
-<a class="product island-1-2 link-box relative chop" href="#">
+<a class="product island-1-2 link-box relative chop" href="{{include.data.link}}">
   <div class="chop push-1-2">
-    <img class="img-flex card-img" src="/images/products/product-catonaut-mug.jpg" alt="">
+    <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
   <div class="pin-lt">
     <i class="icon i-96">
@@ -10,13 +10,13 @@
     </i>
   </div>
   <div class="card-content grid">
-    <div class="unit xs-1-2">
-      <h2 class="title mega text-upper push-0">Catonaut</h2>
-      <p class="type milli">Ceramic Mug</p>
+    <div class="unit xs-1 s-1 m-2-3">
+      <h2 class="title milli push-0">{{include.data.name}}</h2>
+      <p class="type nano push-1-2">by {{include.data.artist}}</p>
     </div>
-    <div class="unit xs-1-2 text-right">
-      <del class="price bold srtike push-0">CA$15.99</del>
-      <p class="sale-price mega bold">CA$7.99</p>
+    <div class="unit xs-1 s-1 m-1-3 price">
+      <del class="bold milli srtike push-0">CA$ {{include.data.price}}</del>
+      <p class="sale-price kilo bold push-0">CA$ {{include.data.sale_price}}</p>
     </div>
   </div>
 </a>
