--- a/products.html
+++ b/products.html
@@ -1,14 +1,27 @@
 ---
 layout: inside
-highlight_nav: all-products
+highlight_nav: posters
 ---
 
-{% pattern banners/page-banner heading="All Products" button_text="Learn More" button_url="/" %}
+{% pattern banners/page-banner heading="Posters" %}
 
-<div class="grid gutter-1-4">
-  {% for product in site.products %}
-    <div class="unit xs-1 s-1 m-1-3 island-1-4">
-      {% pattern cards/product-card data=product %}
+<div class="grid grid-top wrapper">
+
+  <div class="unit xs-1 s-1 m-1 l-1-4 gutter">
+    {% pattern navigations/sidebar %}
+  </div>
+
+  <div class="unit xs-1 s-1 m-1 l-3-4">
+    <div class="grid gutter-1-4 grid-stretch">
+      {% for product in site.products %}
+        <div class="unit xs-1 s-1-2 m-1-3 l-1-3 island-1-4 unit-content-distribute">
+          {% pattern cards/product-card data=product %}
+        </div>
+      {% endfor %}
+      <div class="unit xs-1 text-center">
+        {% pattern navigations/page-nav %}
+      </div>
     </div>
-  {% endfor %}
+  </div>
+
 </div>
