Add final descriptions through config files

--- a/_patterns/cards/creature-card.html
+++ b/_patterns/cards/creature-card.html
@@ -1,7 +1,7 @@
 <div class="card creature-card">
   <h2>Monster Name</h2>
-  <img class="img-flex" src="/images/cryptid.png" alt="griffin">
-  <p>A gnarly description about said monster</p>
-  <strong>$ Pricing</strong>
+  <img class="img-flex img-flex" src="/images/cryptid.png" alt="griffin">
+  <p class="push-0 pad-b-1-2">A gnarly description about said monster</p>
+  <strong class="block pad-b-1-2">$ Pricing</strong>
 {% pattern buttons/basic text="See Collection" url="include.data.url" %}
 </div>
