--- a/_patterns/forms/select-box.html
+++ b/_patterns/forms/select-box.html
@@ -1,4 +1,4 @@
-<label class="pad-b-1-2" for="creatures">Select a Creature</label>
+<label class="pad-b-1-2 max-length" for="creatures">Select a Creature</label>
 <select id="creatures">
   <optgroup label="Griffins">
     <option>European Griffins</option>
