--- a/cards.html
+++ b/cards.html
@@ -5,7 +5,7 @@ highlight_nav: cards
 
 {% pattern banner/banner-no-btn heading="Cards" text="Shop for your original and local art!" %}
 
-<div class="grid island-2 wrapper gutter">
+<div class="grid island-2 wrapper">
   {% for product in site.products limit:3 %}
     <div class="unit [xs-1 s-1 m-1-3 ] island-1-4 text-center">
       {% pattern cards/product-card data=product %}
