Apply max length to some forms

--- a/_patterns/forms/select-box.html
+++ b/_patterns/forms/select-box.html
@@ -1,15 +1,17 @@
-<label class="pad-b-1-2 max-length" for="creatures">Select a Creature</label>
-<select id="creatures">
-  <optgroup label="Griffins">
-    <option>European Griffins</option>
-    <option>Iranian Griffins</option>
-  </optgroup>
-  <optgroup label="Dragons">
-    <option>European Dragons</option>
-    <option>Chinese Dragons</option>
-  </optgroup>
-  <optgroup label="Cryptids">
-    <option>North American Cryptids</option>
-    <option>Australian Cryptids</option>
-  </optgroup>
-</select>
+<div class="max-length">
+  <label class="pad-b-1-2" for="creatures">Select a Creature</label>
+  <select id="creatures">
+    <optgroup label="Griffins">
+      <option>European Griffins</option>
+      <option>Iranian Griffins</option>
+    </optgroup>
+    <optgroup label="Dragons">
+      <option>European Dragons</option>
+      <option>Chinese Dragons</option>
+    </optgroup>
+    <optgroup label="Cryptids">
+      <option>North American Cryptids</option>
+      <option>Australian Cryptids</option>
+    </optgroup>
+  </select>
+</div>
