--- a/_patterns/forms/text-input.html
+++ b/_patterns/forms/text-input.html
@@ -1,4 +1,4 @@
-<div class="push-1-2">
+<div class="push-1-2 max-length">
   <label class="pad-b-1-2" for="cardholder">Enter Text</label>
   <input id="cardholder" required aria-describedby="name-error">
   <p class="error-message milli island-1-2 text-center push-0" id="name-error">
