--- a/_patterns/forms/email-input.html
+++ b/_patterns/forms/email-input.html
@@ -1,4 +1,4 @@
-<div class="push-1-2">
+<div class="push-1-2 max-length">
   <label class="pad-b-1-2" for="email">Email</label>
   <input type="email" id="email" required aria-describedby="email-error">
   <p class="error-message milli island-1-2 text-center push-0" id="email-error">
