Add featured new music card

--- a/_patterns/cards/featured.html
+++ b/_patterns/cards/featured.html
@@ -1,2 +1,14 @@
-<h1>Featured</h1>
-<h2>New Music</h2>
+<div class="grid featured">
+  <div class="unit s-1 xs-1 m-1-2 l-1-2">
+    <h1 class="push-0">Featured</h1>
+    <h3 class="">New Music</h3>
+    <h4 class="push-0">Axel Gonzalez</h4>
+    <p class="push-0 italic"><strong>Wonderland</strong> is Axel Gonzalez new studio album release, and is available for puerchase on all platforms!</p>
+    <div class="list-group-inline">
+      {% pattern buttons/itunes %}
+      {% pattern buttons/spotify %}
+    </div>
+  </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-2">
+    <img class="max-width max-height img-flex wonderland-featured" src="/images/record-case-2.png" alt="">
+  </div>
