--- a/_patterns/cards/creature-card.html
+++ b/_patterns/cards/creature-card.html
@@ -1,7 +1,15 @@
-<div class="card creature-card">
+<!-- <div class="card creature-card">
   <h2>Monster Name</h2>
   <img class="img-flex img-flex" src="/images/cryptid.png" alt="griffin">
   <p class="push-0 pad-b-1-2">A gnarly description about said monster</p>
   <strong class="block pad-b-1-2">$ Pricing</strong>
+{% pattern buttons/basic text="See Collection" url="include.data.url" %}
+</div> -->
+
+<div class="card creature-card">
+  <h2>{{include.data.title}}</h2>
+  <img class="img-flex img-flex" src="{{include.data.image}}" alt="griffin">
+  <p class="push-0 pad-b-1-2">{{include.data.desc}}</p>
+  <strong class="block pad-b-1-2">{{include.data.cost}}</strong>
 {% pattern buttons/basic text="See Collection" url="include.data.url" %}
 </div>
