Add proper image and size to featured card

--- a/_patterns/cards/featured.html
+++ b/_patterns/cards/featured.html
@@ -1,14 +1,17 @@
 <div class="grid featured">
-  <div class="unit s-1 xs-1 m-1-2 l-1-2">
+  <div class="unit s-1 xs-1 m-1-2 l-1-2 gutter-1-2">
     <h1 class="push-0">Featured</h1>
     <h3 class="">New Music</h3>
     <h4 class="push-0">Axel Gonzalez</h4>
     <p class="push-0 italic"><strong>Wonderland</strong> is Axel Gonzalez new studio album release, and is available for puerchase on all platforms!</p>
-    <div class="list-group-inline">
+    <div class="list-group-inline push-0">
       {% pattern buttons/itunes %}
+      <div class="right">
       {% pattern buttons/spotify %}
+      </div>
     </div>
   </div>
-  <div class="unit xs-1 s-1 m-1-2 l-1-2">
-    <img class="max-width max-height img-flex wonderland-featured" src="/images/record-case-2.png" alt="">
+  <div class="unit xs-1 s-1 m-1-2 l-1-2 max-width margin-1-2">
+    <a><img class="img-flex wonderland-featured right" src="/images/record-case-2-small.png" alt="" href="products.html"></a>
+  </div>
   </div>
