--- a/index.html
+++ b/index.html
@@ -4,3 +4,6 @@ layout: default
 
 <h1 class="island-1-2">Home</h1>
   {% pattern navigation/banner2 %}
+<div class="push-r-1-2">
+  {% pattern cards/featured %}
+</div>
