--- a/_patterns/cards/product.html
+++ b/_patterns/cards/product.html
@@ -1,5 +1,5 @@
 <div class="card pad-t-1">
-  <img class="max-width img-flex push-0" src="{{include.data.image}}" alt="">
+  <img class="max-width max-height img-flex push-0" src="{{include.data.image}}" alt="">
   <h3 class="island-1-2 push-0">{{include.data.name}}</h3>
   <div class="blackbg clearfix">{% pattern buttons/seemore url=include.data.url %} <p class="price right push-0">${{include.data.price}}</p></div>
 </div>
