--- a/_patterns/banner/homepagebanner.html
+++ b/_patterns/banner/homepagebanner.html
@@ -1,6 +1,6 @@
 <div class="banner embed embed-24by10 push-1-2">
 
-  <div class="zindex-1 pin-lc banner-img">
+  <div class="zindex-1 pin-lc banner-img w-1">
     {% pattern photos/homepage-banner %}
   </div>
 
