--- a/_patterns/cards/creature-card.html
+++ b/_patterns/cards/creature-card.html
@@ -11,5 +11,5 @@
   <img class="img-flex img-flex" src="{{include.data.image}}" alt="griffin">
   <p class="push-0 pad-b-1-2">{{include.data.desc}}</p>
   <strong class="block pad-b-1-2">{{include.data.cost}}</strong>
-{% pattern buttons/basic text="See Collection" url="include.data.url" %}
+{% pattern buttons/basic text="See Collection" url=include.data.url %}
 </div>
