--- a/_patterns/buttons/basic.html
+++ b/_patterns/buttons/basic.html
@@ -1,1 +1,1 @@
-<a class="btn {{include.addclass}}" href="#">Buy Now</a>
+<a class="btn {{include.addclass}}" href="{{include.url}}">{{include.text}}</a>
