--- a/_patterns/nav/nav.html
+++ b/_patterns/nav/nav.html
@@ -5,7 +5,7 @@
     <nav class="nav unit xs-1 s-1 m-2-3 l-3-4">
       <ul class="nav-ul push-0">
         <li class="island-1-8">
-          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli {% if page.highlight_nav == 'products' %}current{% endif %}" href="/products/">Paintings</a>
+          <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli {% if page.highlight_nav == 'products' %}current{% endif %}" href="/paintings/">Paintings</a>
         </li>
         <li class="island-1-8">
           <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli {% if page.highlight_nav == 'prints' %}current{% endif %}" href="/prints/">Prints</a>
