--- a/paintings.html
+++ b/paintings.html
@@ -6,7 +6,7 @@ highlight_nav: products
 {% pattern banner/banner-no-btn heading="Paintings" text="Shop for your original and local art!" %}
 
 <div class="grid island-2 wrapper">
-  {% for product in site.products limit:3 %}
+  {% for product in site.paintings limit:3 %}
     <div class="unit [xs-1 s-1 m-1-3 ] island-1-4 text-center">
       {% pattern cards/product-card data=product %}
     </div>
