--- a/products.html
+++ b/products.html
@@ -16,8 +16,13 @@ highlight_nav: products
   </div>
 
   <div class="grid pad-b .grid-stretch">
+    {% for product in site.products %}
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+        {% pattern cards/creature-card data=product %}
+      </div>
+    {% endfor %}
 
-    <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
+    <!-- <div class="unit xs-1 s-1 m-1-3 l-1-3 xl-1-3 gutter">
       <div class="card creature-card">
         <h4 class="center-content">Griffins</h4>
         <img class="img-flex" src="/images/griffin.png" alt="griffin">
@@ -42,7 +47,7 @@ highlight_nav: products
         <p>An obscure, undocumented creature typically originating from folklore. Typically mythological in nature, but not necessarily supernatural, their existence is only recognized as pseudoscience.</p>
         {% pattern buttons/basic text="See Collection" url="/griffins/" %}
       </div>
-    </div>
+    </div> -->
 
   </div>
 
