Add new card to home page

--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,11 +1,11 @@
 <footer role="contentinfo">
-  <div class="grid wrapper gutter-1-2">
+  <div class="grid wrapper gutter-1-2 push-0">
     <div class="unit xs-1-2 s-1-2 m-1-2 l-1-2 wrapper pad-t-1-2">
       <h4 class="push-0 left text">Events</h4>
       <a href="#"><small class="event unit push-0 micro right text pad-t-1">Axel Gonzalez live at the Ricoh Coliseum. <datetime>March 29th, 2019.</datetime></small></a>
     </div>
   </div>
-  <div class="wrapper-1-2 island gutter-1-2 text-center">
+  <div class="wrapper-1-2 island gutter-1-2 text-center pad-b-2 push-0">
     <div class="text-center socials pad-t-1-2 island-1-2 inline">
       <i class="icon i-1 embed embed-1by1 pad-t">
         <a href="https://www.facebook.com" aria-label="facebook link"><svg class="embed-item footer-icon"><use xlink:href="/images/icons.svg#facebook"/></svg></a>
