--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 ---
 
-<h1 class="island-1-2">Home</h1>
+<h1 class="island-1-2 push-0">Home</h1>
   {% pattern navigation/banner2 %}
-<div class="push-r-1-2">
+<div class="wrapper">
   {% pattern cards/featured %}
 </div>
