--- a/_patterns/navigation/banner.html
+++ b/_patterns/navigation/banner.html
@@ -3,7 +3,7 @@
     <div class="island-1-2 masthead grid grid-middle line push-0">
       <div class="left unit xs-1-2 s-1-3 m-1-3 l-1-4">
         <div>
-          <a class="logo" href="/">
+          <a class="logo main-logo img-flex" href="/">
             <img src="/images/logo.svg" alt="#" aria-details="logo">
           </a>
         </div>
