--- a/_patterns/navigation/banner2.html
+++ b/_patterns/navigation/banner2.html
@@ -1,1 +1,3 @@
-<img class="img-flex max-width island-2 w-1-2 center-block" src="/images/shroom-log.png" alt="#" aria-details="banner2"></img>
+<div class="wrapper">
+<img class="img-flex center-block pad-b-2" src="/images/shroom-log.png" alt="#" aria-details="banner2"></img>
+</div>
