--- a/products.html
+++ b/products.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<h1>Products</h1>
-<div class="grid gutter-1-4">
+<h1 class="island-1-2 push-0">Products</h1>
+<div class="grid gutter-1-4 island-1-2 push-0">
 {% for product in site.products %}
-  <div class="unit [ xs-1 s-1 m-1-3 ] island-1-4">
+  <div class="unit [ xs-1 s-1 m-1-3 ] island-1-2 push-0">
   {% pattern cards/product data=product %}
   </div>
 {% endfor %}
