Update testimonial text

--- a/_patterns/sections/testimonial-section.html
+++ b/_patterns/sections/testimonial-section.html
@@ -2,7 +2,7 @@
 
   <h3 class="push-1-4">Testimonial</h3>
 
-  <p>We offer a large variety of mythological creatures for purchase. We simply supply the highest quality animals available on the planet and provide you with their individual care instructions. Our creatures are healthy and vaccinated - our 100% guarantee.</p>
+  <p class="italic">"Mythological Creature Market offers a large variety of mythological creatures for purchase. They supply the highest quality animals available on the planet and provide you with their individual care instructions. The creatures we purchased are healthy and vaccinated. The dragon is exceptionally well behaved, and only ate one of my sons. He was terrible at plowing the fields though, so I'm not really that upset."</p>
 
   <div class="testimonialimage">
     <img class="img-flex max-length" src="/images/testimonialimage.png" alt="">
