Add the homepage and convert many of the patterns to become variabled

--- a/_patterns/banners/page-banner.html
+++ b/_patterns/banners/page-banner.html
@@ -1,4 +1,4 @@
-<div class="page-banner pad-t-2 pad-b-2 relative push-2 text-center">
+<div class="page-banner pad-t-2 pad-b-2 relative push text-center">
   <h2 class="page-title push-0 exa">{{include.heading}}</h2>
   <div class="pad-t-1-2">
     {% if include.button_url %}
