--- a/_patterns/banners/promo-banner.html
+++ b/_patterns/banners/promo-banner.html
@@ -1,4 +1,4 @@
-<a class="promo-banner island-1-2 text-center ib" href="#">
+<a class="promo-banner island-1-2 text-center ib" href="{{include.url}}">
   <div class="wrapper pb-content">
     <h2 class="pb-title text-upper push-0 giga">{{include.heading}}</h2>
     <p class="pb-description push-0 mega">{{include.description}}</p>
