--- a/_patterns/buttons/attention.html
+++ b/_patterns/buttons/attention.html
@@ -1,8 +1,8 @@
-<a class="btn btn-attention text-upper icon-link" href="#">
+<a class="btn btn-attention text-upper icon-link" href="{{include.url}}" aria-label="{{include.aria_label}}">
   <i class="icon i-32">
     <svg>
       <use xlink:href="/images/icons.svg#cart"></use>
     </svg>
   </i>
-  <span class="icon-label">Shop Now!<span>
+  <span class="icon-label">{{include.text}}<span>
 </a>
