--- a/_patterns/buttons/ghost.html
+++ b/_patterns/buttons/ghost.html
@@ -1,1 +1,1 @@
-<a class="btn btn-ghost text-upper bold" href="#">Buy a Cat</a>
+<a class="btn btn-ghost text-upper bold" href="{{include.url}}" aria-label="{{include.aria_label}}">{{include.text}}</a>
