--- a/_patterns/buttons/light.html
+++ b/_patterns/buttons/light.html
@@ -1,1 +1,1 @@
-<a class="btn btn-light text-upper" href="{{include.url}}">{{include.text}}</a>
+<a class="btn btn-light text-upper" href="{{include.url}}" aria-label="{{include.aria_label}}">{{include.text}}</a>
