--- a/_patterns/cards/icon-card.html
+++ b/_patterns/cards/icon-card.html
@@ -1,8 +1,10 @@
-<div class="icon-card text-center island">
-  <i class="icon i-96 push-1-2">
-    <svg><use xlink:href="/images/icons.svg{{include.icon}}"></use></svg>
-  </i>
-  <h3 class="kilo push-0">{{include.title}}</h3>
-  <p class="milli push-1-2">{{include.desc}}</p>
+<div class="icon-card text-center unit-content-distribute content-fill island-1-2">
+  <div class="text-center">
+    <i class="icon i-96 push-1-2">
+      <svg><use xlink:href="/images/icons.svg{{include.icon}}"></use></svg>
+    </i>
+  </div>
+  <h3 class="milli push-0">{{include.title}}</h3>
+  <p class="micro push-1-2 content-fill">{{include.desc}}</p>
   <a class="milli" href="{{include.btn_url}}" aria-label="{{include.aria_label}}">Learn More</a>
 </div>
