--- a/_patterns/forms/basic-field.html
+++ b/_patterns/forms/basic-field.html
@@ -1,4 +1,4 @@
-<div class="max-length">
-  <label class="label gutter-1-2" for="name">Full Name</label>
-  <input class="field" id="name" type="text" placeholder="please enter your full name" required>
+<div class="push">
+  <label class="label gutter-1-2" for="{{include.id}}">{{include.label}}</label>
+  <input class="field" id="{{include.id}}" type="text" placeholder="{{include.placeholder}}" required>
 </div>
