--- a/_patterns/forms/checkbox.html
+++ b/_patterns/forms/checkbox.html
@@ -1,4 +1,4 @@
-<div class="push-1-2 unit xs-1 gutter-1-4 max-length">
+<div class="push">
   <input id="cool" type="checkbox">
   <label for="cool" class="check milli">Check this if you're cool</label>
 </div>
