--- a/_patterns/forms/email.html
+++ b/_patterns/forms/email.html
@@ -1,4 +1,4 @@
-<div class="push max-length">
+<div class="push">
   <label  class="label gutter-1-2" for="email">Email</label>
   <input class="field" id="email" type="email" placeholder="example@email.com" required required aria-describedby="email-error">
   <p class="error-message milli island-1-4 push-0" id="email-error">
