--- a/_patterns/forms/radio.html
+++ b/_patterns/forms/radio.html
@@ -1,4 +1,4 @@
-<fieldset class="max-length">
+<fieldset class="push">
   <legend class="legend mega push-1-2">Shipping</legend>
   <input type="radio" id="regular" name="question">
   <label class="push-r radio" for="regular">Regular</label>
