--- a/_patterns/forms/telephone.html
+++ b/_patterns/forms/telephone.html
@@ -1,4 +1,4 @@
-<div class="max-length">
-  <label class="label gutter-1-2" for="telephone">Phone Number</label>
-  <input class="field" id="telephone" type="tel" placeholder="111-888-8888" required>
+<div class="push">
+  <label class="label" for="tel">Phone Number</label>
+  <input class="field" id="tel" type="tel" placeholder="111-111-1111" required>
 </div>
