--- a/_patterns/header/header-main.html
+++ b/_patterns/header/header-main.html
@@ -1,5 +1,5 @@
 {% pattern navigations/tool-bar %}
-<header class="masthead max-length text-center pad-t-2 pad-b">
+<header class="masthead text-center pad-t-2 pad-b zindex-1000">
   <div class="wordmark push-1-2">
     <a href="/" aria-label="This link will bring you to the home page.">
       <i class="icon i-64">
