--- a/_patterns/navigations/breadcrumbs.html
+++ b/_patterns/navigations/breadcrumbs.html
@@ -1,14 +1,14 @@
 <nav>
   <ul class="breadcrumb list-group-inline island-1-4 text-upper">
-    <li class="slash bold">
+    <li class="slash bold push-1-2">
       <a href="#" aria-label="This will link you back home.">Home</a>
     </li>
-    <li class="slash bold">
+    <li class="slash bold push-1-2">
       <a href="#" aria-label="This will link you back to the all products page.">All Products</a>
     </li>
-    <li class="slash bold">
-      <a href="#" aria-label="This will link you back to viewing mugs.">Mugs</a>
+    <li class="slash bold push-1-2">
+      <a href="#" aria-label="This will link you back to viewing mugs.">Art Prints</a>
     </li>
-    <li class="active bold" aria-label="You are currently on this page">Ceramic Mugs</li>
+    <li class="active bold push-1-2" aria-label="You are currently on this page">Posters</li>
   </ul>
 </nav>
