--- a/_patterns/navigations/main-nav.html
+++ b/_patterns/navigations/main-nav.html
@@ -8,7 +8,7 @@
   <ul class="list-group-inline text-center grid grid-middle">
 
     <li class="unit xs-1 s-1 m-1-4 l-1-4 {% if page.highlight_nav == 'all products' %}current{% endif %}">
-      <a class="island-1-2 block" href="/products/" aria-label="This link will bring you to the all products page.">All Products</a>
+      <a class="island-1-2 block" href="#" aria-label="This link will bring you to the all products page.">All Products</a>
     </li>
 
     <li class="unit xs-1 s-1 m-1-4 l-1-4 relative">
@@ -22,7 +22,7 @@
             <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the framed products page.">Framed</a>
           </li>
           <li class="valign-middle {% if page.highlight_nav == 'posters' %}current{% endif %}">
-            <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the poster products page.">Posters</a>
+            <a class="block milli island-1-2" href="/products/" aria-label="This link will bring you to the poster products page.">Posters</a>
           </li>
           <li class="valign-middle {% if page.highlight_nav == 'cards' %}current{% endif %}">
             <a class="block milli island-1-2" href="#" aria-label="This link will bring you to the card products page.">Cards</a>
