--- a/products.html
+++ b/products.html
@@ -5,7 +5,11 @@ highlight_nav: posters
 
 {% pattern banners/page-banner heading="Posters" %}
 
-<div class="grid grid-top wrapper">
+<div class="grid grid-top wrapper-2">
+
+  <div class="unit xs-1 gutter">
+    {% pattern navigations/breadcrumbs %}
+  </div>
 
   <div class="unit xs-1 s-1 m-1 l-1-4 gutter">
     {% pattern navigations/sidebar %}
