--- a/_patterns/banners/hero-banner.html
+++ b/_patterns/banners/hero-banner.html
@@ -1,10 +1,10 @@
-<div class="hero-banner chop relative grid push-2">
-  <div class="hb-img embed embed-16by9 unit xs-1 s-1">
+<div class="hero-banner chop relative grid push">
+  <div class="hb-img embed embed-16by9 unit xs-1 s-1 push">
     <img class="img-flex embed-item" src="/images/{{include.banner}}" alt="">
   </div>
   <div class="hb-content text-left island unit xs-1 s-1">
     <div class="wrapper">
-      <h2 class="push-1-2 banner-title text-upper max-length text-center">{{include.heading}}</h2>
+      <h2 class="push-1-2 banner-title text-upper max-length">{{include.heading}}</h2>
       {% pattern forms/search %}
     </div>
   </div>
