--- a/_patterns/buttons/basic.html
+++ b/_patterns/buttons/basic.html
@@ -1,1 +1,1 @@
-<a class="btn text-upper" href="{{include.url}}">{{include.text}}</a>
+<a class="btn text-upper" href="{{include.url}}" aria-label="{{include.aria}}">{{include.text}}</a>
