--- a/_patterns/cards/category-card.html
+++ b/_patterns/cards/category-card.html
@@ -1,8 +1,8 @@
-<a class="card box-link promo-card" href="{{inlcude.url}}" aria-label="{{include.aria_label}}">
+<a class="card box-link promo-card" href="{{include.url}}" aria-label="{{include.aria_label}}">
   <div class="embed embed-1by1 chop relative">
     <img class="img-flex embed-item card-img" src="{{include.image}}">
-    <div class="promo-title pin-c island">
-      <p class="peta text-center push-0 bold text-upper">{{include.category}}</p>
+    <div class="promo-title pin-tc island-1-4">
+      <p class=" text-center push-0 text-upper">{{include.category}}</p>
     </div>
   </div>
 </a>
