--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,5 +1,5 @@
-<a class="product unit-content-distribute content-fill island-1-2 link-box" href="#" aria-label="View details on the Catonaut ceramic mug that is $15.99">
-  <div class="push-1-2 chop">
+<a class="product unit-content-distribute content-fill link-box island-1-2" href="{{include.data.url}}" aria-label="{{include.data.aria_label}}">
+  <div class="push-1-4 chop">
     <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
   <div class="card-content grid content-fill">
@@ -8,7 +8,7 @@
       <p class="type nano push-1-2">by {{include.data.artist}}</p>
     </div>
     <div class="unit xs-1 s-1 m-1 l-1-3 price content-fill">
-      <p class="milli bold push-0">CA$ {{include.data.price}}</p>
+      <p class="milli bold push-0">CA ${{include.data.price}}</p>
     </div>
   </div>
 </a>
