--- a/_patterns/cards/sale-card.html
+++ b/_patterns/cards/sale-card.html
@@ -1,4 +1,4 @@
-<a class="product island-1-2 link-box relative chop" href="{{include.data.link}}">
+<a class="product island-1-2 link-box relative chop" href="{{include.data.url}}" aria-label="{{include.data.aria_label}}">
   <div class="chop push-1-2">
     <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
@@ -15,7 +15,7 @@
       <p class="type nano push-1-2">by {{include.data.artist}}</p>
     </div>
     <div class="unit xs-1 s-1 m-1-3 price">
-      <del class="bold milli srtike push-0">CA$ {{include.data.price}}</del>
+      <p class="bold milli srtike push-0">CA$ {{include.data.price}}</p>
       <p class="sale-price kilo bold push-0">CA$ {{include.data.sale_price}}</p>
     </div>
   </div>
