--- a/_patterns/forms/select.html
+++ b/_patterns/forms/select.html
@@ -1,4 +1,4 @@
-<div class="max-length">
+<div class="push">
   <label class="label gutter-1-4" for="select">Item</label>
   <select id="select" class="field option-field" value="Option 1" required>
     <option>Option 1</option>
