--- a/_patterns/sectional/half-section.html
+++ b/_patterns/sectional/half-section.html
@@ -1,13 +1,15 @@
-<div class="halfsec-banner grid">
+<div class="halfsec-banner grid island-1-2">
   <div class="hs-img unit xs-1 s-1 m-1-2 l-1-2">
-    <img class="img-flex" src="/images/product-example.jpg" alt="">
+    <img class="img-flex" src="{{include.image}}" alt="{{inlcude.desc}}">
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 relative">
     <div class="hs-content island">
-      <h2 class="push-0">Brand new mugs starting at 20% off!</h2>
-      <p class="push"> Get them now, deal only lasts till February 12th</p>
+      <h2 class="push-0">{{include.heading}}</h2>
+      <p class="push">{{include.desc}}</p>
       <div>
-        {% pattern buttons/ghost %}
+        {% if include.button_url %}
+          {% pattern buttons/basic text=include.button_text url=include.button_url aria=include.button_aria %}
+        {% endif %}
       </div>
     </div>
   </div>
