--- a/_patterns/sectional/sectional-banner.html
+++ b/_patterns/sectional/sectional-banner.html
@@ -1,12 +1,12 @@
 <div class="sec-banner relative grid">
   <div class="sec-img unit xs-1">
-    <img class="img-flex" src="/images/section-example.jpg" alt="">
+    <img class="img-flex" src="{{include.image}}" alt="{{include.aria_label}}" aria-label="An image of an incredible Catonaut on a beautiful new ceramic mug.">
   </div>
   <div class="sec-content text-center unit xs-1 s-1 m-1-2 island">
-    <h2 class="text-left push-0">Brand new mugs starting at 20% off!</h2>
-    <p class="text-left push"> Get them now, deal only lasts till February 12th</p>
-    <div class="text-left" aria-label="click to view products on the brand new wonderful ceramic mugs!">
-      {% pattern buttons/basic %}
+    <h2 class="text-left push-0">{{include.heading}}</h2>
+    <p class="text-left push">{{include.desc}}</p>
+    <div class="text-left">
+      {% pattern buttons/basic text="See More" url="#" aria_label="Click this link to view products on the brand new wonderful ceramic mugs!" %}
     </div>
   </div>
 </div>
