Add a photo array to the pattern library and serveral photos to the website

--- a/_patterns/banners/hero-banner.html
+++ b/_patterns/banners/hero-banner.html
@@ -1,6 +1,6 @@
 <div class="hero-banner chop relative grid push">
   <div class="hb-img embed embed-16by9 unit xs-1 s-1 push">
-    <img class="img-flex embed-item" src="/images/{{include.banner}}" alt="">
+    <img class="img-flex embed-item" src="/images/banners/{{include.banner}}" alt="">
   </div>
   <div class="hb-content text-left island unit xs-1 s-1">
     <div class="wrapper">
