--- a/_patterns/navigations/sidebar.html
+++ b/_patterns/navigations/sidebar.html
@@ -1,7 +1,7 @@
 <div class="side-navigation push-1-2">
-  <input type="checkbox" id="side-nav" class="side-check" checked>
-  <label for="side-nav" class="side-label island-1-2 relative">
-    <span class="icon-label">Menswear</span>
+  <input type="checkbox" id="side-nav-{{include.number}}" class="side-check side-bar">
+  <label for="side-nav-{{include.number}}" class="side-label island-1-2 relative">
+    <span class="icon-label">{{include.data.name}}</span>
     <i class="icon i-32 pin-cr">
       <svg class="side-icon">
         <use xlink:href="/images/icons.svg#open" />
@@ -10,18 +10,11 @@
   </label>
   <nav class="side-nav" id="nav" role="navigation">
     <ul class="list-group push-0">
+      {% for item in include.data.items %}
       <li>
-        <a class="block milli island-1-2 side-current" href="#">All Mens Clothing</a>
+        <a class="block milli island-1-2" href="#">{{item}}</a>
       </li>
-      <li>
-        <a class="block milli island-1-2" href="#">T-shirts</a>
-      </li>
-      <li>
-        <a class="block milli island-1-2" href="#">Tank Tops</a>
-      </li>
-      <li>
-        <a class="block milli island-1-2" href="#">Hoodies & Sweatshirts</a>
-      </li>
+      {% endfor %}
     </ul>
   </nav>
 </div>
