--- a/_patterns/cards/sale-card.html
+++ b/_patterns/cards/sale-card.html
@@ -1,4 +1,4 @@
-<a class="product island-1-2 link-box relative chop" href="{{include.data.url}}" aria-label="{{include.data.aria_label}}">
+<a class="product island-1-4 link-box relative chop unit-content-distribute content-fill" href="{{include.data.url}}" aria-label="{{include.data.aria_label}}">
   <div class="chop push-1-2">
     <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
@@ -9,10 +9,10 @@
       </svg>
     </i>
   </div>
-  <div class="card-content grid">
-    <div class="unit xs-1 s-1 m-2-3">
+  <div class="card-content grid content-fill">
+    <div class="unit xs-1 s-1 m-2-3 unit-content-distribute content-fill">
       <h2 class="title milli push-0">{{include.data.name}}</h2>
-      <p class="type nano push-1-2">by {{include.data.artist}}</p>
+      <p class="type nano push-1-2 content-fill">by {{include.data.artist}}</p>
     </div>
     <div class="unit xs-1 s-1 m-1-3 price">
       <p class="bold milli srtike push-0">CA$ {{include.data.price}}</p>
