--- a/_patterns/navigations/tool-bar.html
+++ b/_patterns/navigations/tool-bar.html
@@ -14,7 +14,7 @@
               <use xlink:href="/images/icons.svg#cart"></use>
             </svg>
           </i>
-          <span class="icon-label">Cart</span>
+          <span class="icon-label">Cart (<span class="micro">2</span>)</span>
         </a>
       </li>
     </ul>
