Add some aria labels

--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<footer class="footer" role="contentinfo">
   <div class="grid island">
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center">
       <ul class="list-group">
@@ -19,13 +19,13 @@
     <div class="unit xs-1 s-1 m-1-3 l-1-3 text-center">
       <menu class="list-group-inline">
         <li>
-          <a class="footer-btn" href="#"><i class="icon i-48"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i></a>
+          <a class="footer-btn" href="https://facebook.com" aria-label="facebook link"><i class="icon i-48"><svg><use xlink:href="/images/icons.svg#facebook"></use></svg></i></a>
         </li>
         <li>
-          <a class="footer-btn" href="#"><i class="icon i-48"><svg><use xlink:href="/images/icons.svg#instagram"></use></svg></i></a>
+          <a class="footer-btn" href="http://instagram.com" aria-label="instagram link"><i class="icon i-48"><svg><use xlink:href="/images/icons.svg#instagram"></use></svg></i></a>
         </li>
         <li>
-          <a class="footer-btn" href="#"><i class="icon i-48"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i></a>
+          <a class="footer-btn" href="http://twitter.com" aria-label="twitter link"><i class="icon i-48"><svg><use xlink:href="/images/icons.svg#twitter"></use></svg></i></a>
         </li>
       </menu>
     </div>
@@ -38,4 +38,4 @@
     </div>
 
   </div>
-</section>
+</footer>
