--- a/_patterns/nav/nav.html
+++ b/_patterns/nav/nav.html
@@ -2,7 +2,7 @@
     <div class="logo unit xs-1 s-1 m-1-3 l-1-4">
       <h1 class="push-0 gutter-1-4 pad-b-1-4"><a href="/">Flora and Zip</a></h1>
     </div>
-    <nav class="nav unit xs-1 s-1 m-2-3 l-3-4">
+    <nav role="navigation" id="nav" tabindex="0" class="nav unit xs-1 s-1 m-2-3 l-3-4">
       <ul class="nav-ul push-0">
         <li class="island-1-8">
           <a class="nav-btn block text-center gutter-1-2 pad-t-1-4 pad-b-1-4 milli {% if page.highlight_nav == 'products' %}current{% endif %}" href="/paintings/">Paintings</a>
