Add some banner room

--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,4 +1,4 @@
-<section class="dots banner-content vertical-align">
+<section class="center-content dots banner-content vertical-align push-2">
       <div class="text-center island-2">
         <h2 class="statement push-0 yotta bold">{{include.heading}}</h2>
         <p>{{include.text}}</p>
