--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,10 +1,10 @@
 <div class="product-card">
-  <div class="embed embed-1by1 product-card-embed">
+  <div class="push gutter embed embed-1by1 product-card-embed">
     <img class="embed-item" src="{{include.data.image | default:'/images/artwork-1.jpg'}}" alt="">
   </div>
   <h3 class="push-0">{{include.data.title}}</h3>
   {% unless include.hide_description %}
-    <p class="push-1-2">{{include.data.description}}</p>
+    <p class="push">{{include.data.description}}</p>
     {% endunless %}
 </div>
 {% pattern buttons/basic text="Buy Now" url=include.data.url %}
