--- a/paintings.html
+++ b/paintings.html
@@ -5,9 +5,9 @@ highlight_nav: products
 
 {% pattern banner/banner-no-btn heading="Paintings" text="Shop for your original and local art!" %}
 
-<div class="grid island-2 wrapper">
+<div class="grid island wrapper">
   {% for product in site.paintings limit:3 %}
-    <div class="unit [xs-1 s-1 m-1-3 ] island-1-4 text-center">
+    <div class="unit [xs-1 s-1 m-1-3 ] island-1-2 gutter-2 text-center">
       {% pattern cards/product-card data=product %}
     </div>
   {% endfor %}
