--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,5 +1,5 @@
-<section class="center-content dots banner-content vertical-align push-2">
-      <div class="text-center island-2">
+<section class="center-content dots banner-content vertical-align push">
+      <div class="text-center island">
         <h2 class="statement push-0 yotta bold">{{include.heading}}</h2>
         <p>{{include.text}}</p>
         <div>
