Add some space to the banner

--- a/_patterns/banner/banner.html
+++ b/_patterns/banner/banner.html
@@ -1,4 +1,4 @@
-<section class="center-content dots banner-content vertical-align push">
+<section class="center-content dots banner-content vertical-align">
       <div class="text-center island">
         <h2 class="statement push-0 yotta bold">{{include.heading}}</h2>
         <p>{{include.text}}</p>
