--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,4 +1,4 @@
-<div class="product-card">
+<div class="product-card pad-b-1-2">
   <div class="push gutter embed embed-1by1 product-card-embed">
     <img class="embed-item" src="{{include.data.image | default:'/images/artwork-1.jpg'}}" alt="">
   </div>
