--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
 <div class="island-2">
   <div class="grid wrapper pad-b-2 pad-t-2">
     {% for product in site.paintings  limit:3 %}
-      <div class="unit s-1 m-1-3 l-1-3 gutter text-center">
+      <div class="unit s-1 m-1-3 l-1-3 gutter text-center pad-b">
 
           {% pattern cards/product-card data=product hide_description=true %}
 
