--- a/paintings.html
+++ b/paintings.html
@@ -7,7 +7,7 @@ highlight_nav: products
 
 <div class="grid island wrapper">
   {% for product in site.paintings limit:3 %}
-    <div class="unit [xs-1 s-1 m-1-3 ] island-1-2 gutter-2 text-center">
+    <div class="unit [xs-1 s-1 m-1-3 ] island-1-2 gutter-2 text-center pad-b">
       {% pattern cards/product-card data=product %}
     </div>
   {% endfor %}
