Add product section pieces for the pattern website

--- a/_patterns/buttons/attention.html
+++ b/_patterns/buttons/attention.html
@@ -1,4 +1,4 @@
-<a class="btn btn-attention text-upper icon-link" href="{{include.url}}" aria-label="{{include.aria_label}}">
+<a class="btn btn-attention text-upper icon-link w-1 text-center" href="{{include.url}}" aria-label="{{include.aria_label}}">
   <i class="icon i-32">
     <svg>
       <use xlink:href="/images/icons.svg#cart"></use>
