--- a/_patterns/cards/sale-card.html
+++ b/_patterns/cards/sale-card.html
@@ -1,6 +1,6 @@
 <a class="product island-1-4 link-box relative chop unit-content-distribute content-fill" href="{{include.data.url}}" aria-label="{{include.data.aria_label}}">
-  <div class="chop push-1-2">
-    <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
+  <div class="embed embed-1by1 chop push-1-2">
+    <img class="img-flex card-img embed-item" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
   <div class="pin-lt">
     <i class="icon i-96">
@@ -10,12 +10,12 @@
     </i>
   </div>
   <div class="card-content grid content-fill">
-    <div class="unit xs-1 s-1 m-2-3 unit-content-distribute content-fill">
-      <h2 class="title milli push-0">{{include.data.name}}</h2>
-      <p class="type nano push-1-2 content-fill">by {{include.data.artist}}</p>
+    <div class="unit xs-1 s-1 m-1 l-2-3 unit-content-distribute content-fill">
+      <h2 class="title milli push-1-2">{{include.data.name}}</h2>
+      <p class="type nano push-1-8 content-fill">by {{include.data.artist}}</p>
     </div>
-    <div class="unit xs-1 s-1 m-1-3 price">
-      <p class="bold milli srtike push-0">CA$ {{include.data.price}}</p>
+    <div class="unit xs-1 s-1 m-1 l-1-3 price">
+      <p class="bold milli srtike push-1-8">CA$ {{include.data.price}}</p>
       <p class="sale-price kilo bold push-0">CA$ {{include.data.sale_price}}</p>
     </div>
   </div>
