--- a/_patterns/forms/telephone.html
+++ b/_patterns/forms/telephone.html
@@ -1,4 +1,4 @@
 <div class="push">
-  <label class="label" for="tel">Phone Number</label>
+  <label class="label push-1-8" for="tel">Phone Number</label>
   <input class="field" id="tel" type="tel" placeholder="111-111-1111" required>
 </div>
