--- a/_patterns/navigations/breadcrumbs.html
+++ b/_patterns/navigations/breadcrumbs.html
@@ -4,11 +4,11 @@
       <a href="#" aria-label="This will link you back home.">Home</a>
     </li>
     <li class="slash bold push-1-2">
-      <a href="#" aria-label="This will link you back to the all products page.">All Products</a>
+      <a href="#" aria-label="This will link you back to the all products page.">Prints</a>
     </li>
     <li class="slash bold push-1-2">
-      <a href="#" aria-label="This will link you back to viewing mugs.">Art Prints</a>
+      <a href="/products/" aria-label="This will link you back to viewing mugs.">Posters</a>
     </li>
-    <li class="active bold push-1-2" aria-label="You are currently on this page">Posters</li>
+    <li class="active bold push-1-2" aria-label="You are currently on this page">Catonaut</li>
   </ul>
 </nav>
