--- a/_patterns/product-details/photo-array.html
+++ b/_patterns/product-details/photo-array.html
@@ -2,13 +2,13 @@
   <div class="unit xs-1 gutter-1-8">
     <ul class="panels list-group embed embed-1by1 push-1-4">
       <li class="embed-item" id="argyle-0">
-        <img class="img-flex" src="/images/products/product-catonaut-mug.jpg" alt="">
+        <img class="img-flex" src="{{include.data.image}}" alt="">
       </li>
       <li class="embed-item" id="argyle-1">
-        <img class="img-flex" src="https://via.placeholder.com/600.png" alt="">
+        <img class="img-flex" src="{{include.data.image_two}}" alt="">
       </li>
       <li class="embed-item" id="argyle-2">
-        <img class="img-flex" src="https://via.placeholder.com/700.png" alt="">
+        <img class="img-flex" src="{{include.data.image_three}}" alt="">
       </li>
     </ul>
   </div>
@@ -16,17 +16,17 @@
     <ul class="tabs grid list-group">
       <li class="unit xs-1-4 gutter-1-8">
         <a class="img-btn link-box" href="#argyle-0">
-          <img class="img-flex" src="/images/products/product-catonaut-mug.jpg" alt="">
+          <img class="img-flex" src="{{include.data.image}}" alt="">
         </a>
       </li>
       <li class="unit xs-1-4 gutter-1-8">
         <a class="img-btn link-box" href="#argyle-1">
-          <img class="img-flex" src="https://via.placeholder.com/600.png" alt="">
+          <img class="img-flex" src="{{include.data.image_two}}" alt="">
         </a>
       </li>
       <li class="unit xs-1-4 gutter-1-8">
         <a class="img-btn link-box" href="#argyle-2">
-          <img class="img-flex" src="https://via.placeholder.com/700.png" alt="">
+          <img class="img-flex" src="{{include.data.image_three}}" alt="">
         </a>
       </li>
     </ul>
