--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,11 +1,11 @@
 <a class="product unit-content-distribute content-fill link-box island-1-4" href="{{include.data.url}}" aria-label="{{include.data.aria_label}}">
-  <div class="push-1-4 chop">
-    <img class="img-flex card-img" src="{{include.data.image}}" alt="{{include.data.desc}}">
+  <div class="push-1-4 chop embed embed-1by1">
+    <img class="img-flex card-img embed-item" src="{{include.data.image}}" alt="{{include.data.desc}}">
   </div>
   <div class="card-content grid content-fill">
     <div class="unit xs-1 s-1 m-1 l-2-3 unit-content-distribute">
       <h2 class="title milli push-0">{{include.data.name}}</h2>
-      <p class="type nano push-1-2">by {{include.data.artist}}</p>
+      <p class="type nano push-1-8">by {{include.data.artist}}</p>
     </div>
     <div class="unit xs-1 s-1 m-1 l-1-3 price content-fill">
       <p class="milli bold push-0">CA ${{include.data.price}}</p>
