--- a/_patterns/forms/basic-field.html
+++ b/_patterns/forms/basic-field.html
@@ -1,4 +1,4 @@
 <div class="push">
-  <label class="label gutter-1-2" for="{{include.id}}">{{include.label}}</label>
+  <label class="label gutter-1-2 push-1-8" for="{{include.id}}">{{include.label}}</label>
   <input class="field" id="{{include.id}}" type="text" placeholder="{{include.placeholder}}" required>
 </div>
