--- a/_patterns/forms/quantity.html
+++ b/_patterns/forms/quantity.html
@@ -1,4 +1,4 @@
 <div class="push">
-  <label class="label gutter-1-2" for="quantity">Quantity</label>
+  <label class="label gutter-1-2 push-1-8" for="quantity">Quantity:</label>
   <input class="field" id="quantity" type="number" min="0" required>
 </div>
