--- a/_patterns/forms/radio.html
+++ b/_patterns/forms/radio.html
@@ -1,7 +1,7 @@
 <fieldset class="push">
   <legend class="legend mega push-1-2">Shipping</legend>
   <input type="radio" id="regular" name="question">
-  <label class="push-r radio" for="regular">Regular</label>
+  <label class="push-r radio push-1-8" for="regular">Regular</label>
   <input type="radio" id="express" name="question">
-  <label class="push-r radio" for="express">Express</label>
+  <label class="push-r radio push-1-8" for="express">Express</label>
 </fieldset>
