--- a/test.html
+++ b/test.html
@@ -1,3 +1,19 @@
 ---
 layout: inside
+title: Catonaut Poster
 ---
+
+<section class="wrapper">
+  {% pattern navigations/breadcrumbs %}
+</section>
+
+<section class="grid pad-t-2 pad-b-2 gutter-1-2 wrapper">
+  {% for product in site.products limit:1 %}
+    <div class="unit xs-1 s-1 m-1-2 gutter-1-2 push-2">
+      {% pattern product-details/photo-array data=product %}
+    </div>
+    <div class="unit xs-1 s-1 m-1-2 gutter-1-2">
+      {% pattern product-details/product-detail-posters data=product %}
+    </div>
+    {% endfor %}
+</section>
